# Ka_mod

./: partitions.csv  sdkconfig  sdkconfig.old
boards/: a1s_snd_only.csv  gen.sh  pcm.csv  pure.csv  radiva52.csv  radiva836.csv  radiva837.csv  radiva84.csv  standard_adb.csv  tol.csv  ttgo_t.csv  ttgotm.csv  vs_only.csv
components/audio_player/: audio_player.c
components/audio_renderer/: audio_renderer.c
components/audio_renderer/include/: audio_renderer.h
components/fdk-aac_decoder/: fdk_aac_decoder.c
components/fifo/: spiram_fifo.c
components/fifo/include/: spiram.h
components/u8g2/csrc/: u8g2_esp32_hal.c  u8g2_esp32_hal.h
components/ucglib/csrc/: ucg_esp32_hal.c
components/xpt2046/: xpt2046.c
for_idf_replace/: cmd.txt
for_idf_replace/esp-idf/components/wpa_supplicant/: CMakeLists.txt  component.mk
main/: CMakeLists.txt  ClickButtons.c  ClickEncoder.c  ClickJoystick.c  Kconfig.projbuild  ac101.c  addon.c  addoncommon.c  addonu8g2.c  addonucg.c  addonucg.c.mod  app_main.c  audio_hal.c  board_pins_config.c  cencode.c  custom.c  eeprom.c  gpio.c  interface.c  irnec.c  ntp.c  ota.c  ota.c.new  servers.c  telnet.c  timezone.c  vs1053.c  vs1053b-patches.c  webclient.c  webserver.c  websocket.c
main/include/: ac101.h  addon.h  addonucg.h  app_main.h  audio_hal.h  gpio.h  pin_conf.h  serv-fs.h.mod  vs1053.h  vs1053b-patches-flac.plg  vs10xx.h  websocket.h
test/: Makefile  README.md  log.txt  sdkconfig  version.txt
test/Ka_mod2/: .project  CMakeLists.txt  CMakeSettings.json  sdkconfig
test/Ka_mod2/components/audio_player/: audio_player.c
test/Ka_mod2/components/audio_player/include/: audio_player.h
test/Ka_mod2/main/: CMakeLists.txt  app_main.c  vs1053.c  webclient.c
test/Ka_mod2/main/include/: vs10xx.h  webclient.h
test/components/audio_player/: audio_player.c
test/components/fifo/: spiram_fifo.c
test/main/: app_main.c  partitions.csv  vs1053.c  webclient.c
test/main/include/: app_main.h  vs1053.h  vs10xx-patches-flac.plg  vs10xx.h
webpage/: css-html-js-minify.py  favicon  generate0.sh  index  index.html  logo  script  script.js  style  style1
webpage_mod/: gen.sh
