idf_component_register(
	SRCS
	"ac101.c"
	"addon.c"
	"addoncommon.c"
	"addonu8g2.c"
	"addonucg.c"
	"app_main.c"
	"audio_hal.c"
	"board_pins_config.c"
	"cencode.c"
	"ClickButtons.c"
	"ClickEncoder.c"
	"ClickJoystick.c"
	"custom.c"
	"eeprom.c"
	"gpio.c"
	"interface.c"
	"irnec.c"
	"ntp.c"
	"ota.c"
	"servers.c"
	"telnet.c"
	"timezone.c"
	"vs1053.c"
	"webclient.c"
	"webserver.c"
	"websocket.c"

	"../components/audio_player/audio_player.c"
	
	"../components/audio_renderer/audio_renderer.c"
	
	"../components/common/common_buffer.c"
	
	"../components/fdk-aac_decoder/fdk_aac_decoder.c"
	
	"../components/fifo/spiram_fifo.c"
	
	"../components/mad/align.c"
	"../components/mad/bit.c"
	"../components/mad/decoder.c"
	"../components/mad/fixed.c"
	"../components/mad/frame.c"
	"../components/mad/huffman.c"
	"../components/mad/layer12.c"
	"../components/mad/layer3.c"
	"../components/mad/stream.c"
	"../components/mad/synth_stereo.c"
	"../components/mad/timer.c"
	"../components/mad/version.c"
	
	"../components/mp3_decoder/mp3_decoder.c"
	
	"../components/u8g2/csrc/u8g2_bitmap.c"
	"../components/u8g2/csrc/u8g2_box.c"
	"../components/u8g2/csrc/u8g2_buffer.c"
	"../components/u8g2/csrc/u8g2_circle.c"
	"../components/u8g2/csrc/u8g2_cleardisplay.c"
	"../components/u8g2/csrc/u8g2_d_memory.c"
	"../components/u8g2/csrc/u8g2_d_setup.c"
	"../components/u8g2/csrc/u8g2_esp32_hal.c"
	"../components/u8g2/csrc/u8g2_font.c"
	"../components/u8g2/csrc/u8g2_fonts.c"
	"../components/u8g2/csrc/u8g2_hvline.c"
	"../components/u8g2/csrc/u8g2_input_value.c"
	"../components/u8g2/csrc/u8g2_intersection.c"
	"../components/u8g2/csrc/u8g2_karadio32_fonts.c"
	"../components/u8g2/csrc/u8g2_kerning.c"
	"../components/u8g2/csrc/u8g2_line.c"
	"../components/u8g2/csrc/u8g2_ll_hvline.c"
	"../components/u8g2/csrc/u8g2_message.c"
	"../components/u8g2/csrc/u8g2_polygon.c"
	"../components/u8g2/csrc/u8g2_selection_list.c"
	"../components/u8g2/csrc/u8g2_setup.c"
	"../components/u8g2/csrc/u8x8_8x8.c"
	"../components/u8g2/csrc/u8x8_byte.c"
	"../components/u8g2/csrc/u8x8_cad.c"
	"../components/u8g2/csrc/u8x8_debounce.c"
	"../components/u8g2/csrc/u8x8_display.c"
	"../components/u8g2/csrc/u8x8_d_a2printer.c"
	"../components/u8g2/csrc/u8x8_d_il3820_296x128.c"
	"../components/u8g2/csrc/u8x8_d_ist3020.c"
	"../components/u8g2/csrc/u8x8_d_ks0108.c"
	"../components/u8g2/csrc/u8x8_d_lc7981.c"
	"../components/u8g2/csrc/u8x8_d_ld7032_60x32.c"
	"../components/u8g2/csrc/u8x8_d_ls013b7dh03.c"
	"../components/u8g2/csrc/u8x8_d_max7219.c"
	"../components/u8g2/csrc/u8x8_d_pcd8544_84x48.c"
	"../components/u8g2/csrc/u8x8_d_pcf8812.c"
	"../components/u8g2/csrc/u8x8_d_pcf8814_hx1230.c"
	"../components/u8g2/csrc/u8x8_d_sbn1661.c"
	"../components/u8g2/csrc/u8x8_d_sed1330.c"
	"../components/u8g2/csrc/u8x8_d_sh1107.c"
	"../components/u8g2/csrc/u8x8_d_ssd1305.c"
	"../components/u8g2/csrc/u8x8_d_ssd1306_128x32.c"
	"../components/u8g2/csrc/u8x8_d_ssd1306_128x64_noname.c"
	"../components/u8g2/csrc/u8x8_d_ssd1306_64x32.c"
	"../components/u8g2/csrc/u8x8_d_ssd1306_64x48.c"
	"../components/u8g2/csrc/u8x8_d_ssd1306_96x16.c"
	"../components/u8g2/csrc/u8x8_d_ssd1309.c"
	"../components/u8g2/csrc/u8x8_d_ssd1322.c"
	"../components/u8g2/csrc/u8x8_d_ssd1325.c"
	"../components/u8g2/csrc/u8x8_d_ssd1326.c"
	"../components/u8g2/csrc/u8x8_d_ssd1327.c"
	"../components/u8g2/csrc/u8x8_d_ssd1329.c"
	"../components/u8g2/csrc/u8x8_d_ssd1606_172x72.c"
	"../components/u8g2/csrc/u8x8_d_ssd1607_200x200.c"
	"../components/u8g2/csrc/u8x8_d_st75256.c"
	"../components/u8g2/csrc/u8x8_d_st7565.c"
	"../components/u8g2/csrc/u8x8_d_st7567.c"
	"../components/u8g2/csrc/u8x8_d_st7588.c"
	"../components/u8g2/csrc/u8x8_d_st7920.c"
	"../components/u8g2/csrc/u8x8_d_stdio.c"
	"../components/u8g2/csrc/u8x8_d_t6963.c"
	"../components/u8g2/csrc/u8x8_d_uc1601.c"
	"../components/u8g2/csrc/u8x8_d_uc1604.c"
	"../components/u8g2/csrc/u8x8_d_uc1608.c"
	"../components/u8g2/csrc/u8x8_d_uc1610.c"
	"../components/u8g2/csrc/u8x8_d_uc1611.c"
	"../components/u8g2/csrc/u8x8_d_uc1617.c"
	"../components/u8g2/csrc/u8x8_d_uc1638.c"
	"../components/u8g2/csrc/u8x8_d_uc1701_dogs102.c"
	"../components/u8g2/csrc/u8x8_d_uc1701_mini12864.c"
	"../components/u8g2/csrc/u8x8_fonts.c"
	"../components/u8g2/csrc/u8x8_gpio.c"
	"../components/u8g2/csrc/u8x8_input_value.c"
	"../components/u8g2/csrc/u8x8_message.c"
	"../components/u8g2/csrc/u8x8_selection_list.c"
	"../components/u8g2/csrc/u8x8_setup.c"
	"../components/u8g2/csrc/u8x8_string.c"
	"../components/u8g2/csrc/u8x8_u16toa.c"
	"../components/u8g2/csrc/u8x8_u8toa.c"
	
	"../components/ucglib/csrc/ucg_bitmap.c"
	"../components/ucglib/csrc/ucg_box.c"
	"../components/ucglib/csrc/ucg_ccs.c"
	"../components/ucglib/csrc/ucg_circle.c"
	"../components/ucglib/csrc/ucg_clip.c"
	"../components/ucglib/csrc/ucg_com_msg_api.c"
	"../components/ucglib/csrc/ucg_dev_default_cb.c"
	"../components/ucglib/csrc/ucg_dev_ic_ili9163.c"
	"../components/ucglib/csrc/ucg_dev_ic_ili9325.c"
	"../components/ucglib/csrc/ucg_dev_ic_ili9325_spi.c"
	"../components/ucglib/csrc/ucg_dev_ic_ili9341.c"
	"../components/ucglib/csrc/ucg_dev_ic_ld50t6160.c"
	"../components/ucglib/csrc/ucg_dev_ic_pcf8833.c"
	"../components/ucglib/csrc/ucg_dev_ic_seps225.c"
	"../components/ucglib/csrc/ucg_dev_ic_ssd1289.c"
	"../components/ucglib/csrc/ucg_dev_ic_ssd1331.c"
	"../components/ucglib/csrc/ucg_dev_ic_ssd1351.c"
	"../components/ucglib/csrc/ucg_dev_ic_st7735.c"
	"../components/ucglib/csrc/ucg_dev_ic_st7735L.c"
	"../components/ucglib/csrc/ucg_dev_ic_st7735S.c"
	"../components/ucglib/csrc/ucg_dev_ic_st7735W.c"
	"../components/ucglib/csrc/ucg_dev_ic_st7789.c"
	"../components/ucglib/csrc/ucg_dev_ic_st7789_240x240.c"
	"../components/ucglib/csrc/ucg_dev_msg_api.c"
	"../components/ucglib/csrc/ucg_dev_oled_128x128_ft.c"
	"../components/ucglib/csrc/ucg_dev_oled_128x128_ilsoft.c"
	"../components/ucglib/csrc/ucg_dev_oled_128x128_univision.c"
	"../components/ucglib/csrc/ucg_dev_oled_160x128_samsung.c"
	"../components/ucglib/csrc/ucg_dev_oled_96x64_univision.c"
	"../components/ucglib/csrc/ucg_dev_tft_128x128_ili9163.c"
	"../components/ucglib/csrc/ucg_dev_tft_128x128_st7735.c"
	"../components/ucglib/csrc/ucg_dev_tft_128x160_st7735.c"
	"../components/ucglib/csrc/ucg_dev_tft_128x160_W_st7735.c"
	"../components/ucglib/csrc/ucg_dev_tft_132x132_pcf8833.c"
	"../components/ucglib/csrc/ucg_dev_tft_240x240_st7789.c"
	"../components/ucglib/csrc/ucg_dev_tft_240x320_ili9325_spi.c"
	"../components/ucglib/csrc/ucg_dev_tft_240x320_ili9341.c"
	"../components/ucglib/csrc/ucg_dev_tft_240x320_itdb02.c"
	"../components/ucglib/csrc/ucg_dev_tft_240x320_ssd1289.c"
	"../components/ucglib/csrc/ucg_dev_tft_240x320_st7789.c"
	"../components/ucglib/csrc/ucg_dev_tft_80x160_st7735.c"
	"../components/ucglib/csrc/ucg_esp32_hal.c"
	"../components/ucglib/csrc/ucg_font.c"
	"../components/ucglib/csrc/ucg_init.c"
	"../components/ucglib/csrc/ucg_karadio32_fonts.c"
	"../components/ucglib/csrc/ucg_line.c"
	"../components/ucglib/csrc/ucg_pixel.c"
	"../components/ucglib/csrc/ucg_pixel_font_data.c"
	"../components/ucglib/csrc/ucg_polygon.c"
	"../components/ucglib/csrc/ucg_rotate.c"
	"../components/ucglib/csrc/ucg_scale.c"
	"../components/ucglib/csrc/ucg_vector_font_data.c"
	
	"../components/xpt2046/xpt2046.c"

	"../components/fdk-aac-oreo-m8/libAACdec/src/aac_rom.cpp"
	"../components/fdk-aac-oreo-m8/libAACdec/src/aacdecoder.cpp"
	"../components/fdk-aac-oreo-m8/libAACdec/src/aacdecoder_lib.cpp"
	"../components/fdk-aac-oreo-m8/libAACdec/src/aacdec_tns.cpp"
	"../components/fdk-aac-oreo-m8/libAACdec/src/aacdec_drc.cpp"
	"../components/fdk-aac-oreo-m8/libAACdec/src/aacdec_hcr.cpp"
	"../components/fdk-aac-oreo-m8/libAACdec/src/aacdec_hcrs.cpp"
	"../components/fdk-aac-oreo-m8/libAACdec/src/aacdec_hcr_bit.cpp"
	"../components/fdk-aac-oreo-m8/libAACdec/src/aacdec_pns.cpp"
	"../components/fdk-aac-oreo-m8/libAACdec/src/rvlc.cpp"
	"../components/fdk-aac-oreo-m8/libAACdec/src/rvlcbit.cpp"
	"../components/fdk-aac-oreo-m8/libAACdec/src/rvlcconceal.cpp"
	"../components/fdk-aac-oreo-m8/libAACdec/src/stereo.cpp"
	"../components/fdk-aac-oreo-m8/libAACdec/src/aac_ram.cpp"
	"../components/fdk-aac-oreo-m8/libAACdec/src/block.cpp"
	"../components/fdk-aac-oreo-m8/libAACdec/src/conceal.cpp"
	"../components/fdk-aac-oreo-m8/libAACdec/src/channel.cpp"
	"../components/fdk-aac-oreo-m8/libAACdec/src/channelinfo.cpp"
	"../components/fdk-aac-oreo-m8/libAACdec/src/pulsedata.cpp"
	"../components/fdk-aac-oreo-m8/libAACdec/src/ldfiltbank.cpp"
	"../components/fdk-aac-oreo-m8/libPCMutils/src/limiter.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/fixpoint_math.cpp"
	"../components/fdk-aac-oreo-m8/libSYS/src/genericStds.cpp"
	"../components/fdk-aac-oreo-m8/libMpegTPDec/src/tpdec_lib.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/FDK_bitbuffer.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/FDK_tools_rom.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/FDK_crc.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/dct.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/mdct.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/fft.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/fft_rad2.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/autocorr2nd.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/dct.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/FDK_bitbuffer.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/FDK_core.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/FDK_hybrid.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/FDK_tools_rom.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/FDK_trigFcts.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/fft.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/fft_rad2.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/fixpoint_math.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/mdct.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/qmf.cpp"
	"../components/fdk-aac-oreo-m8/libFDK/src/scale.cpp"
	"../components/fdk-aac-oreo-m8/libPCMutils/src/limiter.cpp"
	"../components/fdk-aac-oreo-m8/libPCMutils/src/pcmutils_lib.cpp"
	"../components/fdk-aac-oreo-m8/libMpegTPDec/src/tpdec_asc.cpp"
	"../components/fdk-aac-oreo-m8/libSBRdec/src/env_calc.cpp"
	"../components/fdk-aac-oreo-m8/libSBRdec/src/env_dec.cpp"
	"../components/fdk-aac-oreo-m8/libSBRdec/src/env_extr.cpp"
	"../components/fdk-aac-oreo-m8/libSBRdec/src/huff_dec.cpp"
	"../components/fdk-aac-oreo-m8/libSBRdec/src/lpp_tran.cpp"
	"../components/fdk-aac-oreo-m8/libSBRdec/src/psbitdec.cpp"
	"../components/fdk-aac-oreo-m8/libSBRdec/src/psdec.cpp"
	"../components/fdk-aac-oreo-m8/libSBRdec/src/psdec_hybrid.cpp"
	"../components/fdk-aac-oreo-m8/libSBRdec/src/sbrdecoder.cpp"
	"../components/fdk-aac-oreo-m8/libSBRdec/src/sbrdec_drc.cpp"
	"../components/fdk-aac-oreo-m8/libSBRdec/src/sbrdec_freq_sca.cpp"
	"../components/fdk-aac-oreo-m8/libSBRdec/src/sbr_crc.cpp"
	"../components/fdk-aac-oreo-m8/libSBRdec/src/sbr_deb.cpp"
	"../components/fdk-aac-oreo-m8/libSBRdec/src/sbr_dec.cpp"
	"../components/fdk-aac-oreo-m8/libSBRdec/src/sbr_ram.cpp"
	"../components/fdk-aac-oreo-m8/libSBRdec/src/sbr_rom.cpp"
	"../components/fdk-aac-oreo-m8/libMpegTPDec/src/tpdec_adif.cpp"
	"../components/fdk-aac-oreo-m8/libMpegTPDec/src/tpdec_adts.cpp"
	"../components/fdk-aac-oreo-m8/libMpegTPDec/src/tpdec_drm.cpp"
	"../components/fdk-aac-oreo-m8/libMpegTPDec/src/tpdec_latm.cpp"
	"../components/fdk-aac-oreo-m8/libMpegTPDec/src/tpdec_lib.cpp"
)

include_directories(

	"./include/"
	
	"../components/audio_player/"

	"../components/audio_renderer/"
	
	"../components/common/"
	
	"../components/fdk-aac_decoder/"
	
	"../components/fifo/"
	
	"../components/mad/"

	"../components/mp3_decoder/"

	"../components/u8g2/csrc"

	"../components/ucglib/csrc/"

	"../components/xpt2046/"

	"../components/audio_player/include/"

	"../components/audio_renderer/include/"

	"../components/common/include/"

	"../components/fdk-aac_decoder/include/" 

	"../components/fdk-aac-oreo-m8/libAACdec/include/" "../components/fdk-aac-oreo-m8/libFDK/include" "../components/fdk-aac-oreo-m8/libSBRdec/include/" "../components/fdk-aac-oreo-m8/libPCMutils/include/" "../components/fdk-aac-oreo-m8/libSYS/include/" "../components/fdk-aac-oreo-m8/libMPEGTPdec/include/"

	"../components/fifo/include/"

	"../components/mp3_decoder/include/"
)